@startuml

skinparam classAttributeIconSize 0

class ContractController {
    +Create(dto: ContractDto)
}
interface IContractService {
    +CreateAsync(entity)
}
class Contract {
    +Id: int
    +ContractCode: string
    +StartDate: DateTime
    +EndDate: DateTime
    +Status: int
    +Price: decimal
}

ContractController ..> IContractService : uses
IContractService ..> Contract : manages
@enduml